Fixed spacing on What is KA lite page; added bootstrap mixins & variables

--- a/fle_site/static/less/mixins.less
+++ b/fle_site/static/less/mixins.less
@@ -50,3 +50,23 @@
     -moz-box-shadow:    @x @y @blur @spread rgba(0, 0, 0, @alpha);
     box-shadow:     @x @y @blur @spread rgba(0, 0, 0, @alpha);
 }
+
+.responsive-spacer {
+    // for lg display 
+    @media (min-width: @screen-lg-min){ 
+        margin: 50px 0px;
+    }
+
+    // for md display
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) { 
+        margin: 40px 0px;
+    }
+
+    // for sm display
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { 
+        margin: 30px 0px;
+    }
+
+    // for xs display
+    margin: 25px 0px;
+}
